manifests/deployment.yaml
# Copyright (c) 2022 SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatekeeper-policy-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gatekeeper-policy-manager
  template:
    metadata:
      labels:
        app: gatekeeper-policy-manager
    spec:
      serviceAccountName: gatekeeper-policy-manager
      containers:
      - name: gatekeeper-policy-manager
        image: quay.io/sighup/gatekeeper-policy-manager
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        livenessProbe:
            httpGet:
              path: /health
              port: http
        readinessProbe:
            httpGet:
              path: /health
              port: http
        ports:
        - containerPort: 8080
          name: http
        securityContext:
          privileged: false
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop:
              - ALL
