manifests/enable-jwt-auth.yaml
# Copyright (c) 2017-present SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

# Protect GPM with an authenticating proxy, for example Pomerium. The proxy identifies the user and
# signs an assertion. GPM verifies that signature on every request.
#
# This mode needs no GPM_SECRET_KEY: GPM holds no session.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatekeeper-policy-manager
spec:
  template:
    spec:
      containers:
      - name: gatekeeper-policy-manager
