manifests/multi-cluster.yaml
# Copyright (c) 2022 SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatekeeper-policy-manager
spec:
  template:
    spec:
      containers:
      - name: gatekeeper-policy-manager
        volumeMounts:
          - mountPath: /home/nonroot/.kube/config
            name: kubeconfig
            subPath: kubeconfig
      volumes:
        - name: kubeconfig
          secret:
            secretName: kubeconfig
